# beehive

./: demo.py  setup.cfg  template.py
beehive/: __init__.py  core.py  geometry.py  steering.py
honeycomb/: __init__.py  controller.py  event.py  model.py  view.py
samples/: basic.py
src/beehive/: __init__.py  core.py  steering.py
src/beehive/tests/: __init__.py
