[metadata]
name = beehive
version = 0.0.1
summary = a library of behaviours for games
home_page = https://github.com/ricardokirkner/beehive
description_file = README.txt
author = Ricardo Kirkner
author_email = ricardo@kirkner.com.ar
keywords =
    behaviour
    steering
    autonomous agent
    game
classifier =
    Development Status :: 1 - Planning

[files]
packages_root = .
packages =
    beehive
extra_files =
    README.txt
    setup.py

[test]
suite = beehive.tests
